fixed footer cutoff

--- a/SHRDS/css/main.css
+++ b/SHRDS/css/main.css
@@ -19,6 +19,7 @@ html {
 
 body {
     font-weight: bold;
+	padding-bottom: 100px;
 }
 
 p {
